[package]
name = "osclink"
version = "0.1.0"
authors = ["Jack Foltz <jack@foltz.io>"]
edition = "2018"

[dependencies]
rosc = "0.4"

libp2p = "0.33"
prost = "0.7"

futures = "0.3"
tokio = { version = "1", features = ["time"] }
wasm-timer = "0.2"

smallvec = "1"

log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-compat-02 = "0.1"
env_logger = "0.8"

[build-dependencies]
prost-build = "0.7"